Creating 2 Particle systems breaks the app #59482

Closed
opened 2018-12-17 08:08:04 +01:00 by Dias · 14 comments

System Information
Operating system: Ryzen 7
Graphics card: RX Vega 56

Blender Version
Broken: 2.80 beta closes the app

Worked: (optional)

Creating second particle systems shut down the app.

Short description of error

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

  1. create a plane
  2. subdivide it 100 times
  3. add textures
  4. upload file with rocks (and add them to new collection)
  5. use them as Hair particles
  6. Set them the way i needed
  7. Upload anothe file with 1 rock
  8. create new collection for it
  9. choose terrain and add one more particle system
  10. breaks the app
**System Information** Operating system: Ryzen 7 Graphics card: RX Vega 56 **Blender Version** Broken: 2.80 beta closes the app Worked: (optional) Creating second particle systems shut down the app. **Short description of error** **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). 1. create a plane 2. subdivide it 100 times 3. add textures 4. upload file with rocks (and add them to new collection) 5. use them as Hair particles 6. Set them the way i needed 7. Upload anothe file with 1 rock 8. create new collection for it 9. choose terrain and add one more particle system 10. breaks the app
Author

Added subscriber: @diashimself

Added subscriber: @diashimself

#59895 was marked as duplicate of this issue

#59895 was marked as duplicate of this issue

#59720 was marked as duplicate of this issue

#59720 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can't reproduce this on my end.

Could you provide the exact blender version you are using (hash and build date)? These are available on the splash screen.

Additionally could you attach a minimal .blend file that has this issue? So I could for example open that file and begin on step 9

I can't reproduce this on my end. Could you provide the exact blender version you are using (hash and build date)? These are available on the splash screen. Additionally could you attach a minimal .blend file that has this issue? So I could for example open that file and begin on step 9
Author

Hello, Sebastian

Sorry, I have forgotten one more step. U should choose "Hair" particle sysmem.

I have attached my file so u can add particle system and choose Hair.

Hash: 4488056f3d
Date: 2018 - 12 -16 00:27
V: 2.80 beta{F5981052}

Hello, Sebastian Sorry, I have forgotten one more step. U should choose "Hair" particle sysmem. I have attached my file so u can add particle system and choose Hair. Hash: 4488056f3d9 Date: 2018 - 12 -16 00:27 V: 2.80 beta{[F5981052](https://archive.blender.org/developer/F5981052/terrain.blend)}
Clément Foucault was assigned by Sebastian Parborg 2018-12-17 19:30:27 +01:00

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x0000555557cf30ed in drw_shgroup_create_hair_procedural_ex (object=0x7fffefbe9a08, psys=0x7fffd7578308, md=0x7fffd6c42208, hair_pass=0x7fffd4605080, 
    gpu_mat=0x0, gpu_shader=0x7fffd46b8be8) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_hair.c:149
149			if (dupli_object->type & OB_DUPLICOLLECTION) {
(gdb) bt
#0  0x0000555557cf30ed in drw_shgroup_create_hair_procedural_ex (object=0x7fffefbe9a08, psys=0x7fffd7578308, md=0x7fffd6c42208, hair_pass=0x7fffd4605080, 
    gpu_mat=0x0, gpu_shader=0x7fffd46b8be8) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_hair.c:149
#1  0x0000555557cf3480 in DRW_shgroup_hair_create (object=0x7fffefbe9a08, psys=0x7fffd7578308, md=0x7fffd6c42208, hair_pass=0x7fffd4605080, 
    shader=0x7fffd46b8be8) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_hair.c:193
#2  0x0000555557cfae00 in workbench_cache_populate_particles (vedata=0x7fffc39a8608, ob=0x7fffefbe9a08)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/workbench_deferred.c:775
#3  0x0000555557cfaf6b in workbench_deferred_solid_cache_populate (vedata=0x7fffc39a8608, ob=0x7fffefbe9a08)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/workbench_deferred.c:798
#4  0x0000555557cbc506 in workbench_solid_cache_populate (vedata=0x7fffc39a8608, ob=0x7fffefbe9a08)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/solid_mode.c:55
#5  0x0000555557c6e7ec in drw_engines_cache_populate (ob=0x7fffefbe9a08)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1017
#6  0x0000555557c6fa4c in DRW_draw_render_loop_ex (depsgraph=0x7fffeaae2008, engine_type=0x55555d0cab60 <DRW_engine_viewport_eevee_type>, ar=0x7fffd1ffa908, 
    v3d=0x7fffd410e708, viewport=0x7fffcbbd59c8, evil_C=0x7fffefc30288)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1483
- 7  0x0000555557c6f658 in DRW_draw_view (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1409
- 8  0x00005555571906e4 in view3d_draw_view (C=0x7fffefc30288, ar=0x7fffd1ffa908)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/space_view3d/view3d_draw.c:1334
#9  0x0000555557190794 in view3d_main_region_draw (C=0x7fffefc30288, ar=0x7fffd1ffa908)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/space_view3d/view3d_draw.c:1355
#10 0x0000555557647251 in ED_region_do_draw (C=0x7fffefc30288, ar=0x7fffd1ffa908)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/screen/area.c:529
#11 0x0000555557049450 in wm_draw_window_offscreen (C=0x7fffefc30288, win=0x7fffd45e3f88, stereo=false)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:580
#12 0x00005555570499ce in wm_draw_window (C=0x7fffefc30288, win=0x7fffd45e3f88)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:712
#13 0x0000555557049eda in wm_draw_update (C=0x7fffefc30288)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:866
- 14 0x0000555557046b91 in WM_main (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:433
- 15 0x00005555570414de in main (argc=1, argv=0x7fffffffdcf8) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:521

I'm guessing this in render related.

Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x0000555557cf30ed in drw_shgroup_create_hair_procedural_ex (object=0x7fffefbe9a08, psys=0x7fffd7578308, md=0x7fffd6c42208, hair_pass=0x7fffd4605080, gpu_mat=0x0, gpu_shader=0x7fffd46b8be8) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_hair.c:149 149 if (dupli_object->type & OB_DUPLICOLLECTION) { (gdb) bt #0 0x0000555557cf30ed in drw_shgroup_create_hair_procedural_ex (object=0x7fffefbe9a08, psys=0x7fffd7578308, md=0x7fffd6c42208, hair_pass=0x7fffd4605080, gpu_mat=0x0, gpu_shader=0x7fffd46b8be8) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_hair.c:149 #1 0x0000555557cf3480 in DRW_shgroup_hair_create (object=0x7fffefbe9a08, psys=0x7fffd7578308, md=0x7fffd6c42208, hair_pass=0x7fffd4605080, shader=0x7fffd46b8be8) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_hair.c:193 #2 0x0000555557cfae00 in workbench_cache_populate_particles (vedata=0x7fffc39a8608, ob=0x7fffefbe9a08) at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/workbench_deferred.c:775 #3 0x0000555557cfaf6b in workbench_deferred_solid_cache_populate (vedata=0x7fffc39a8608, ob=0x7fffefbe9a08) at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/workbench_deferred.c:798 #4 0x0000555557cbc506 in workbench_solid_cache_populate (vedata=0x7fffc39a8608, ob=0x7fffefbe9a08) at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/solid_mode.c:55 #5 0x0000555557c6e7ec in drw_engines_cache_populate (ob=0x7fffefbe9a08) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1017 #6 0x0000555557c6fa4c in DRW_draw_render_loop_ex (depsgraph=0x7fffeaae2008, engine_type=0x55555d0cab60 <DRW_engine_viewport_eevee_type>, ar=0x7fffd1ffa908, v3d=0x7fffd410e708, viewport=0x7fffcbbd59c8, evil_C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1483 - 7 0x0000555557c6f658 in DRW_draw_view (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1409 - 8 0x00005555571906e4 in view3d_draw_view (C=0x7fffefc30288, ar=0x7fffd1ffa908) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_view3d/view3d_draw.c:1334 #9 0x0000555557190794 in view3d_main_region_draw (C=0x7fffefc30288, ar=0x7fffd1ffa908) at /home/zed/programmering/blender_master/blender/source/blender/editors/space_view3d/view3d_draw.c:1355 #10 0x0000555557647251 in ED_region_do_draw (C=0x7fffefc30288, ar=0x7fffd1ffa908) at /home/zed/programmering/blender_master/blender/source/blender/editors/screen/area.c:529 #11 0x0000555557049450 in wm_draw_window_offscreen (C=0x7fffefc30288, win=0x7fffd45e3f88, stereo=false) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:580 #12 0x00005555570499ce in wm_draw_window (C=0x7fffefc30288, win=0x7fffd45e3f88) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:712 #13 0x0000555557049eda in wm_draw_update (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:866 - 14 0x0000555557046b91 in WM_main (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:433 - 15 0x00005555570414de in main (argc=1, argv=0x7fffffffdcf8) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:521 ``` I'm guessing this in render related.

Added subscriber: @Crazyrender

Added subscriber: @Crazyrender

A simpler (and very small test case) for this bug is available from #59720
IntroScene.blend

A simpler (and very small test case) for this bug is available from #59720 [IntroScene.blend](https://archive.blender.org/developer/F6025717/IntroScene.blend)

Added subscriber: @marcuspollio

Added subscriber: @marcuspollio

Even simpler reproduction method is available from #59895

Even simpler reproduction method is available from #59895

This issue was referenced by 21fedfbca0

This issue was referenced by 21fedfbca0219781e7c17bcd7be84f6a3746e4e9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Indeed the bug has been fixed, as of version: 2.80 (sub 41), branch: master, commit date: 2019-01-16 13:58, hash: 792c453b2a
Thanks !

Merci beaucoup @fclem, c'est nickel bleu ciel !

Indeed the bug has been fixed, as of version: 2.80 (sub 41), branch: master, commit date: 2019-01-16 13:58, hash: 792c453b2a59 Thanks ! Merci beaucoup @fclem, c'est nickel bleu ciel !
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59482
No description provided.