Fix T59482: Creating 2 Particle systems breaks the app